--- a/qa/.classpath
+++ b/qa/.classpath
@@ -60,7 +60,7 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/org.jboss.narayana.xts.wstx11-interop"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/org.jboss.narayana.xts.xts-test-servlet"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/org.jboss.narayana.xts.xtstest"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/a org.jboss.spec.javax.transaction.jboss-transaction-api_1.2_spec"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/a jboss-transaction-api"/>
 	<classpathentry kind="lib" path="/org.jboss.narayana.jts.jts/target/test-classes"/>
 	<classpathentry kind="lib" path="dist/narayana-full-5.0.5.Final-SNAPSHOT/jacorb/lib/antlr-2.7.2.jar"/>
 	<classpathentry kind="lib" path="dist/narayana-full-5.0.5.Final-SNAPSHOT/jacorb/lib/backport-util-concurrent.jar"/>
