JBTM-2222 Do not move the GAV for txframework

--- a/pom.xml
+++ b/pom.xml
@@ -476,6 +476,7 @@
     <module>rts</module>
     <module>txbridge</module>
     <module>STM</module>
+    <module>txframework</module>
     <module>compensations</module>
     <module>osgi</module>
     <module>narayana-full</module>
