JBTM-2367 Moved ClassloadingUtility to common folder

--- a/ArjunaJTS/orbportability/pom.xml
+++ b/ArjunaJTS/orbportability/pom.xml
@@ -78,8 +78,8 @@
       <version>${project.version}</version>
     </dependency>
     <dependency>
-      <groupId>org.jboss.narayana.arjunacore</groupId>
-      <artifactId>arjuna</artifactId>
+      <groupId>org.jboss.narayana</groupId>
+      <artifactId>common</artifactId>
       <version>${project.version}</version>
     </dependency>
     <dependency>
