JBTM-2378 make some of the dependencies provided for easier container deployment

--- a/ArjunaCore/arjuna/services/pom.xml
+++ b/ArjunaCore/arjuna/services/pom.xml
@@ -34,6 +34,7 @@
       <groupId>tanukisoft</groupId>
       <artifactId>wrapper</artifactId>
       <version>${version.tanukisoft}</version>
+      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>org.jboss.narayana.arjunacore</groupId>
