--- a/ArjunaCore/arjuna/pom.xml
+++ b/ArjunaCore/arjuna/pom.xml
@@ -85,6 +85,7 @@
       <groupId>org.hornetq</groupId>
       <artifactId>hornetq-core</artifactId>
       <version>${version.org.hornetq}</version>
+      <scope>provided</scope>
       <exclusions>
         <exclusion>
           <groupId>io.netty</groupId>
