--- a/ArjunaJTA/spi/pom.xml
+++ b/ArjunaJTA/spi/pom.xml
@@ -102,6 +102,7 @@
             <groupId>org.jboss.spec.javax.interceptor</groupId>
             <artifactId>jboss-interceptors-api_1.2_spec</artifactId>
             <version>${version.org.jboss.spec.javax.interceptor}</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.jboss.spec.javax.transaction</groupId>
