--- a/ArjunaJTS/narayana-jts-jacorb/pom.xml
+++ b/ArjunaJTS/narayana-jts-jacorb/pom.xml
@@ -391,6 +391,7 @@
       <groupId>tanukisoft</groupId>
       <artifactId>wrapper</artifactId>
       <version>${version.tanukisoft}</version>
+      <scope>provided</scope>
     </dependency>
   </dependencies>
       </profile>
