--- a/XTS/WS-T/pom.xml
+++ b/XTS/WS-T/pom.xml
@@ -191,6 +191,7 @@
       <groupId>org.jboss.ws</groupId>
       <artifactId>jbossws-api</artifactId>
       <version>${version.org.jboss.ws}</version>
+      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>org.jboss.logging</groupId>
@@ -208,6 +209,13 @@
       <groupId>org.jboss.narayana.arjunacore</groupId>
       <artifactId>arjunacore</artifactId>
       <version>${project.version}</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.jboss.spec.javax.servlet</groupId>
+      <artifactId>jboss-servlet-api_3.0_spec</artifactId>
+      <version>${version.org.jboss.spec.javax.servlet}</version>
+      <scope>provided</scope>
     </dependency>
   </dependencies>
 </project>
