--- a/txframework/pom.xml
+++ b/txframework/pom.xml
@@ -114,6 +114,12 @@
             <version>${version.org.jboss.resteasy}</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.jboss.spec.javax.servlet</groupId>
+            <artifactId>jboss-servlet-api_3.0_spec</artifactId>
+            <version>${version.org.jboss.spec.javax.servlet}</version>
+            <scope>provided</scope>
+        </dependency>
 
         <!-- Test dependencies -->
         <dependency>
@@ -138,6 +144,12 @@
             <groupId>org.jboss.narayana.xts</groupId>
             <artifactId>byteman_support</artifactId>
             <version>${project.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jboss.ws</groupId>
+            <artifactId>jbossws-api</artifactId>
+            <version>${version.org.jboss.ws}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
