--- a/XTS/localjunit/pom.xml
+++ b/XTS/localjunit/pom.xml
@@ -60,6 +60,12 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.jboss.spec.javax.servlet</groupId>
+            <artifactId>jboss-servlet-api_3.0_spec</artifactId>
+            <version>${version.org.jboss.spec.javax.servlet}</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
             <groupId>org.jboss.spec.javax.ejb</groupId>
             <artifactId>jboss-ejb-api_3.1_spec</artifactId>
             <version>${version.org.jboss.spec.javax.ejb}</version>
