--- a/rts/at/util/pom.xml
+++ b/rts/at/util/pom.xml
@@ -49,6 +49,7 @@
       <groupId>log4j</groupId>
       <artifactId>log4j</artifactId>
       <version>${version.log4j}</version>
+      <scope>provided</scope>
       <exclusions>
         <exclusion>
           <groupId>com.sun.jmx</groupId>
@@ -78,11 +79,13 @@
       <groupId>org.jboss.resteasy</groupId>
       <artifactId>jaxrs-api</artifactId>
       <version>${version.org.jboss.resteasy}</version>
+      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>org.jboss.resteasy</groupId>
       <artifactId>resteasy-jaxrs</artifactId>
       <version>${version.org.jboss.resteasy}</version>
+      <scope>provided</scope>
       <!-- filter out unwanted jars -->
       <exclusions>
         <exclusion>
