JBTM-2378 make some of the dependencies provided for easier container deployment

--- a/narayana-full/pom.xml
+++ b/narayana-full/pom.xml
@@ -137,6 +137,17 @@
 
     <!-- Ensure these are in the distribution -->
     <dependency>
+      <groupId>org.hornetq</groupId>
+      <artifactId>hornetq-core</artifactId>
+      <version>${version.org.hornetq}</version>
+      <exclusions>
+        <exclusion>
+          <groupId>io.netty</groupId>
+          <artifactId>netty</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+    <dependency>
       <groupId>org.jboss.logging</groupId>
       <artifactId>jboss-logging</artifactId>
       <version>${version.org.jboss.logging.jboss-logging}</version>
