--- a/pom.xml
+++ b/pom.xml
@@ -400,9 +400,9 @@
     
     <!-- External dependencies versions -->
     <version.org.codehaus.mojo.findbugs-maven-plugin>3.0.1</version.org.codehaus.mojo.findbugs-maven-plugin>
-    <jboss-as.version>10.0.0.Alpha1-SNAPSHOT</jboss-as.version>
-    <version.org.wildfly.core>1.0.0.CR1</version.org.wildfly.core>
-    <version.org.wildfly.build-tools>1.0.0.Alpha8</version.org.wildfly.build-tools>
+    <jboss-as.version>10.0.0.Alpha2-SNAPSHOT</jboss-as.version>
+    <version.org.wildfly.core>2.0.0.Alpha2</version.org.wildfly.core>
+    <version.org.wildfly.build-tools>1.0.0.Final</version.org.wildfly.build-tools>
     <version.org.wildfly.arquillian>1.0.0.Alpha5</version.org.wildfly.arquillian>
     <version.org.jboss.spec.javax.jms.jboss-jms-api_2.0_spec>1.0.0.Final</version.org.jboss.spec.javax.jms.jboss-jms-api_2.0_spec>
     <version.org.jboss.jandex>1.1.0.Final</version.org.jboss.jandex>
