JBTM-2414 Upgrade org.wildfly.arquillian to 1.0.0.CR1 Upgrade org.jboss.logging.jboss-logging to 3.2.1.Final Upgrade org.jboss.logging.jboss-logging-processor to 2.0.0.Final Fix the incompatible version of jboss-logging in jatmibroker-xatmi

--- a/blacktie/pom.xml
+++ b/blacktie/pom.xml
@@ -133,6 +133,11 @@
                 <version>1.0.0.Alpha2</version>
             </dependency>
             <dependency>
+                <groupId>org.jboss.logging</groupId>
+                <artifactId>jboss-logging</artifactId>
+                <version>${version.org.jboss.logging.jboss-logging}</version>
+            </dependency>
+            <dependency>
                 <groupId>org.jboss.spec.javax.jms</groupId>
                 <artifactId>jboss-jms-api_1.1_spec</artifactId>
                 <version>1.0.1.Final</version>
