--- a/blacktie/jatmibroker-xatmi/pom.xml
+++ b/blacktie/jatmibroker-xatmi/pom.xml
@@ -153,7 +153,7 @@
         <dependency>
             <groupId>org.jboss.logging</groupId>
             <artifactId>jboss-logging</artifactId>
-            <version>3.1.0.GA</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>jacorb</groupId>
