--- a/pom.xml
+++ b/pom.xml
@@ -403,13 +403,13 @@
     <jboss-as.version>10.0.0.Alpha4-SNAPSHOT</jboss-as.version>
     <version.org.wildfly.core>2.0.0.Alpha2</version.org.wildfly.core>
     <version.org.wildfly.build-tools>1.1.0.Beta1</version.org.wildfly.build-tools>
-    <version.org.wildfly.arquillian>1.0.0.Alpha5</version.org.wildfly.arquillian>
+    <version.org.wildfly.arquillian>1.0.0.CR1</version.org.wildfly.arquillian>
     <version.org.jboss.spec.javax.jms.jboss-jms-api_2.0_spec>1.0.0.Final</version.org.jboss.spec.javax.jms.jboss-jms-api_2.0_spec>
     <version.org.jboss.jandex>1.1.0.Final</version.org.jboss.jandex>
     <version.rhino.js>1.7R2</version.rhino.js>
     <version.org.jboss.logmanager>1.5.1.Final</version.org.jboss.logmanager>
-    <version.org.jboss.logging.jboss-logging>3.1.3.GA</version.org.jboss.logging.jboss-logging>
-    <version.org.jboss.logging.jboss-logging-processor>1.1.0.Final</version.org.jboss.logging.jboss-logging-processor>
+    <version.org.jboss.logging.jboss-logging>3.2.1.Final</version.org.jboss.logging.jboss-logging>
+    <version.org.jboss.logging.jboss-logging-processor>2.0.0.Final</version.org.jboss.logging.jboss-logging-processor>
     <version.org.jboss.integration>6.0.0.CR1</version.org.jboss.integration>
     <version.org.jboss.ironjacamar>1.1.1.Final</version.org.jboss.ironjacamar>
     <version.org.jboss.ws>1.0.2.Final</version.org.jboss.ws>
