--- a/txframework/pom.xml
+++ b/txframework/pom.xml
@@ -284,7 +284,7 @@
                                     Used in arquillian.xml
                                 -->
                                 <node.address>127.0.0.1</node.address>
-                                <server.config>standalone.xml</server.config>
+                                <server.config>standalone-xts.xml</server.config>
                             </systemPropertyVariables>
                         </configuration>
                     </plugin>
