JBTM-2424 Only depend on hornetq-journal

--- a/narayana-full/pom.xml
+++ b/narayana-full/pom.xml
@@ -138,7 +138,7 @@
     <!-- Ensure these are in the distribution -->
     <dependency>
       <groupId>org.hornetq</groupId>
-      <artifactId>hornetq-core</artifactId>
+      <artifactId>hornetq-journal</artifactId>
       <version>${version.org.hornetq}</version>
       <exclusions>
         <exclusion>
