--- a/blacktie/btadmin/pom.xml
+++ b/blacktie/btadmin/pom.xml
@@ -106,7 +106,7 @@
 					<forkMode>once</forkMode>
 					<workingDirectory>target/test-classes</workingDirectory>
 					<environmentVariables>
-						<Path>${ld_library_path}</Path>
+						<PATH>${ld_library_path}</PATH>
 						<LD_LIBRARY_PATH>${ld_library_path}</LD_LIBRARY_PATH>
 						<BLACKTIE_CONFIGURATION_DIR>${blacktie.configuration.dir}</BLACKTIE_CONFIGURATION_DIR>
 						<BLACKTIE_SCHEMA_DIR>${project.build.directory}/cxx/test/</BLACKTIE_SCHEMA_DIR>
@@ -114,7 +114,7 @@
 					</environmentVariables>
 					<systemProperties>
 						<property>
-							<name>Path</name>
+							<name>PATH</name>
 							<value>${ld_library_path}</value>
 						</property>
 						<property>
