--- a/blacktie/integration-tests/pom.xml
+++ b/blacktie/integration-tests/pom.xml
@@ -74,7 +74,7 @@
 					<forkMode>once</forkMode>
 					<workingDirectory>target/test-classes</workingDirectory>
 					<environmentVariables>
-						<PATH>${ld_library_path}</PATH>
+						<PATH>${path}</PATH>
 						<LD_LIBRARY_PATH>${ld_library_path}</LD_LIBRARY_PATH>
 						<BLACKTIE_CONFIGURATION_DIR>${blacktie.configuration.dir}</BLACKTIE_CONFIGURATION_DIR>
 						<BLACKTIE_SCHEMA_DIR>${project.build.directory}/cxx/test/</BLACKTIE_SCHEMA_DIR>
@@ -91,7 +91,7 @@
 						</property>
 						<property>
 							<name>PATH</name>
-							<value>${ld_library_path}</value>
+							<value>${path}</value>
 						</property>
 						<property>
 							<name>LD_LIBRARY_PATH</name>
