--- a/blacktie/pom.xml
+++ b/blacktie/pom.xml
@@ -386,7 +386,7 @@
                 </os>
             </activation>
             <properties>
-                <ld_library_path>${env.PATH};${project.build.directory}\cxx\runtime\lib;${project.build.directory}\cxx\test\lib;${project.build.directory}</ld_library_path>
+                <path>${env.PATH};${project.build.directory}\cxx\runtime\lib;${project.build.directory}\cxx\test\lib;${project.build.directory}</path>
                 <exclude_unpack_type/>
                 <blacktie.configuration.dir>.</blacktie.configuration.dir>
             </properties>
@@ -399,6 +399,7 @@
                 </os>
             </activation>
             <properties>
+                <path>${env.PATH}</path>
                 <ld_library_path>${project.build.directory}/cxx/runtime/lib:${project.build.directory}/cxx/test/lib:${project.build.directory}</ld_library_path>
                 <export.dll/>
                 <blacktie.configuration.dir>.</blacktie.configuration.dir>
