--- a/ArjunaJTS/jts/pom.xml
+++ b/ArjunaJTS/jts/pom.xml
@@ -592,6 +592,7 @@
                     <exclude>**/jacorb/**</exclude>
                     <exclude>**/javaidl/**</exclude>
                     <exclude>**/JacORB*/**</exclude>
+                    <exclude>**/Recovered*UnitTest.java</exclude>
                   </excludes>
                   <reportsDirectory>${project.build.directory}/ibmorb-surefire-reports</reportsDirectory>
                   <classpathDependencyExcludes>
