JBTM-2440 Disable BMUnitRunner tests with ibmjdk

--- a/ArjunaCore/arjuna/pom.xml
+++ b/ArjunaCore/arjuna/pom.xml
@@ -179,6 +179,15 @@
             <configuration>
               <useManifestOnlyJar>false</useManifestOnlyJar>
               <excludes>
+                <!-- exclude tests that load the byteman agent (BMUnitRunner) -->
+                <exclude>**/RecoveryManagerStartStopTest.java</exclude>
+                <exclude>**/LogStoreTest2.java</exclude>
+                <exclude>**/LogStoreRecoveryTest.java</exclude>
+                <exclude>**/ReaperMonitorTest.java</exclude>
+                <exclude>**/ReaperTestCase3.java</exclude>
+                <exclude>**/ReaperTestCase2.java</exclude>
+                <exclude>**/ReaperTestCase.java</exclude>
+                <!-- not sure why these are excluded -->
                 <exclude>**/resources/**</exclude>
                 <exclude>**/DummyCheckedAction.java</exclude>
                 <exclude>**/MyAccess.java</exclude>
