--- a/ArjunaJTS/jts/pom.xml
+++ b/ArjunaJTS/jts/pom.xml
@@ -578,6 +578,11 @@
                   <skip>false</skip>
                   <systemProperties combine.children="append" />
                   <excludes>
+                    <!-- exclude tests that load the byteman agent (BMUnitRunner) -->
+                    <exclude>**/RecoveredServerTransactionUnitTest.java</exclude>
+                    <exclude>**/RecoveredTransactionUnitTest.java</exclude>
+
+                    <!-- not sure why these are excluded -->
                     <exclude>**/common/**</exclude>
                     <exclude>**/exceptions/**</exclude>
                     <exclude>**/orbspecific/resources/**</exclude>
@@ -589,6 +594,8 @@
                     <exclude>**/GridTest.java</exclude>
                     <exclude>**/remote/**</exclude>
                     <exclude>**/DefaultTimeout.java</exclude>
+
+                    <!-- disable JacORB and JdkORB specific tests -->
                     <exclude>**/jacorb/**</exclude>
                     <exclude>**/javaidl/**</exclude>
                     <exclude>**/JacORB*/**</exclude>
