--- a/XTS/localjunit/pom.xml
+++ b/XTS/localjunit/pom.xml
@@ -139,6 +139,38 @@
         </dependency>
     </dependencies>
     <profiles>
+      <profile>
+        <id>jts-ibmorb</id>
+        <activation>
+          <property>
+            <name>ibmorb-disabled</name>
+          </property>
+        </activation>
+        <build>
+          <plugins>
+            <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-surefire-plugin</artifactId>
+              <executions>
+                <execution>
+                  <id>surefire-ibmorb</id>
+                  <phase>test</phase>
+                  <goals>
+                    <goal>test</goal>
+                  </goals>
+                  <configuration>
+                    <skip>false</skip>
+                    <excludes>
+                      <exclude>**/SimpleIsolatedServers.java</excldue>
+                    </excludes>
+                  </configuration>
+                </execution>
+              </executions>
+            </plugin>
+          </plugins>
+        </build>
+      </profile>
+
         <profile>
             <id>arq-remote</id>
             <activation>
