JBTM-2440 update ibm jdk excludes

--- a/ArjunaJTA/jdbc/pom.xml
+++ b/ArjunaJTA/jdbc/pom.xml
@@ -173,7 +173,7 @@
                 <configuration>
                   <skip>false</skip>
                   <excludes>
-                    <exclude>**/RecoveryTest.java</excldue>
+                    <exclude>**/RecoveryTest.java</exclude>
                   </excludes>
                 </configuration>
               </execution>
