--- a/XTS/localjunit/pom.xml
+++ b/XTS/localjunit/pom.xml
@@ -161,7 +161,7 @@
                   <configuration>
                     <skip>false</skip>
                     <excludes>
-                      <exclude>**/SimpleIsolatedServers.java</excldue>
+                      <exclude>**/SimpleIsolatedServers.java</exclude>
                     </excludes>
                   </configuration>
                 </execution>
