JBTM-2453 Updated to deploy the OSGi jars to external repositories during deploy phase

--- a/osgi/jta/pom.xml
+++ b/osgi/jta/pom.xml
@@ -108,6 +108,14 @@
 		   </plugins>
 	   </pluginManagement>
 	   <plugins>
+       <plugin>
+         <inherited>false</inherited>
+         <groupId>org.apache.maven.plugins</groupId>
+         <artifactId>maven-deploy-plugin</artifactId>
+         <configuration>
+           <skip>false</skip>
+         </configuration>
+       </plugin>
 		   <plugin>
 			   <groupId>org.apache.felix</groupId>
 			   <artifactId>maven-bundle-plugin</artifactId>
